# ballistic-project

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
engine/: CMakeLists.txt  main.cpp  test.cpp  test.h
engine/Entity/: CircleEntity.h  Entity.h  PolygonEntity.h  RectEntity.h
engine/Game/: Game.cpp  Game.h
engine/GameObject/: GameObject.h
engine/Scene/: Scene.cpp  Scene.h
engine/Ui/: UiFactory.h
engine/Ui/Buttons/: CircleButton.h  RectangleButton.h
engine/Ui/HUD/: HudArrow.h  HudElement.h  HudEntityFixed.h
engine/core/: RigidBody.h
engine/core/Collider/: Collider.h
engine/core/Entity/: Entity.h  EntityFactory.h  SquareEntity.h
engine/utils/Factory/: Factory.h
engine/utils/Math/: Common.h  Quat2D.h  Vector.h
game/: CMakeLists.txt  Camera.h  EventManager.h  main.cpp
game/Components/GraphicsComponents/Bullets/: GCBullet.cpp  GCBullet.h
game/Components/GraphicsComponents/Character/: GCCharacter.cpp  GCCharacter.h
game/Components/GraphicsComponents/Ground/: GCGround.cpp  GCGround.h
game/Components/GraphicsComponents/Wall/: GCWall.cpp  GCWall.h
game/Components/InputComponents/Bullets/: ICBullet.cpp  ICBullet.h
game/Components/InputComponents/Character/: ICCharacter.cpp  ICCharacter.h
game/Components/InputComponents/UI/: ICButton.cpp
game/Components/PhysicsComponents/Bullets/: PCBullet.cpp  PCBullet.h
game/Components/PhysicsComponents/Character/: PCCharacter.cpp  PCCharacter.h
game/GameObjects/: Bullet.cpp  Bullet.h  GameObjectFactory.h  Ground.cpp  Ground.h  Wall.cpp  Wall.h
game/GameObjects/Character/: Character.cpp  Character.h
game/GameObjects/UI/: Button.cpp  Button.h
game/Utils/: Utils.h
game/scenes/: GameScene.cpp  GameScene.h  PhysicsScene.cpp  PhysicsScene.h  SceneEnum.h  StartScene.cpp  StartScene.h
lib/: CMakeLists.txt
lib/thor/include/Thor/: Animations.hpp  Config.hpp  Graphics.hpp  Input.hpp  Math.hpp  Particles.hpp  Resources.hpp  Shapes.hpp  Time.hpp  Vectors.hpp
lib/thor/include/Thor/Animations/: AnimationMap.hpp  AnimationPrimitives.hpp  Animator.hpp  ColorAnimation.hpp  FadeAnimation.hpp  FrameAnimation.hpp  Playback.hpp  RefAnimation.hpp
lib/thor/include/Thor/Graphics/: BigSprite.hpp  BigTexture.hpp  ColorGradient.hpp  ToString.hpp  UniformAccess.hpp
lib/thor/include/Thor/Input/: Action.hpp  ActionMap.hpp  Connection.hpp  EventSystem.hpp  InputNames.hpp  Joystick.hpp
lib/thor/include/Thor/Math/: Distribution.hpp  Distributions.hpp  Random.hpp  Triangulation.hpp  TriangulationFigures.hpp  Trigonometry.hpp
lib/thor/include/Thor/Particles/: Affectors.hpp  EmissionInterface.hpp  Emitters.hpp  Particle.hpp  ParticleSystem.hpp
lib/thor/include/Thor/Resources/: OwnershipModels.hpp  ResourceExceptions.hpp  ResourceHolder.hpp  ResourceLoader.hpp  SfmlLoaders.hpp
lib/thor/include/Thor/Shapes/: Arrow.hpp  ConcaveShape.hpp  Shapes.hpp
lib/thor/include/Thor/Time/: CallbackTimer.hpp  StopWatch.hpp  Timer.hpp
lib/thor/include/Thor/Vectors/: PolarVector2.hpp  VectorAlgebra2D.hpp  VectorAlgebra3D.hpp
lib/thor/src/: Action.cpp  ActionOperations.cpp  Affectors.cpp  Arrow.cpp  BigSprite.cpp  BigTexture.cpp  CallbackTimer.cpp  ColorAnimation.cpp  ColorGradient.cpp  ConcaveShape.cpp  Connection.cpp  Distributions.cpp  Emitters.cpp  FadeAnimation.cpp  FrameAnimation.cpp  InputNames.cpp  Joystick.cpp  Particle.cpp  ParticleSystem.cpp  Random.cpp  Shapes.cpp  StopWatch.cpp  Timer.cpp  ToString.cpp  Triangulation.cpp  Trigonometry.cpp  UniformAccess.cpp
physicsEngine/: CMakeLists.txt
physicsEngine/PE/PE/: CircleCollider.h  Collider.h  PE.vcxproj  PE.vcxproj.filters  PolygonCollider.h  RectangleCollider.h  RigidBody.h  Vector2.h
physicsEngine/PHE2/PHE2/src/: box2d.h
physicsEngine/PHE2/PHE2/src/collision/: BroadPhase.cpp  BroadPhase.h  ChainShape.cpp  ChainShape.h  CircleShape.cpp  CircleShape.h  CollideCircle.cpp  CollideEdge.cpp  CollidePolygon.cpp  Collision.cpp  Collision.h  Distance.cpp  Distance.h  DynamicTree.cpp  DynamicTree.h  EdgeShape.cpp  EdgeShape.h  PolygonShape.cpp  PolygonShape.h  Shape.h  TimeOfImpact.cpp  TimeOfImpact.h
physicsEngine/PHE2/PHE2/src/common/: Common.h  Math.cpp  Math.h  TimeStep.h  Timer.cpp
physicsEngine/PHE2/PHE2/src/dynamics/: Body.cpp  Body.h  ChainAndCircleContact.cpp  ChainAndPolygonContact.cpp  CircleContact.cpp  Contact.cpp  Contact.h  ContactManager.cpp  ContactManager.h  ContactSolver.cpp  ContactSolver.h  EdgeAndCircleContact.cpp  EdgeAndPolygonContact.cpp  Fixture.cpp  Fixture.h  Island.cpp  Island.h  PolygonAndCircleContact.cpp  PolygonAndCircleContact.h  PolygonContact.cpp  World.cpp  World.h  WorldCallbacks.cpp  WorldCallbacks.h
physicsEngine/PhysicsEngine/PhysicsEngine/: PhysicsEngine.vcxproj  PhysicsEngine.vcxproj.filters
physicsEngine/PhysicsEngine/PhysicsEngine/src/core/: CollisionResolver.h  PhysicsWorld.h  Transform.h
physicsEngine/PhysicsEngineV2/PhysicsEngineV2/: PhysicsEngineV2.vcxproj  PhysicsEngineV2.vcxproj.filters
physicsEngine/PhysicsEngineV2/PhysicsEngineV2/src/: main.cpp
physicsEngine/PhysicsEngineV2/PhysicsEngineV2/src/core/: AABB.h  (+5 more)
physicsEngine/collision/: BroadPhase.cpp  BroadPhase.h  ChainShape.cpp  ChainShape.h  CircleShape.cpp  CircleShape.h  CollideCircle.cpp  CollideEdge.cpp  CollidePolygon.cpp  Collision.cpp  Collision.h  Distance.cpp  Distance.h  DynamicTree.cpp  DynamicTree.h  EdgeShape.cpp  EdgeShape.h  PolygonShape.cpp  PolygonShape.h  Shape.h  TimeOfImpact.cpp  TimeOfImpact.h
physicsEngine/common/: Common.h  Math.h  TimeStep.h  Timer.h
physicsEngine/dynamics/: Body.cpp  Body.h  ChainAndCircleContact.cpp  ChainAndCircleContact.h  ChainAndPolygonContact.cpp  ChainAndPolygonContact.h  CircleContact.cpp  CircleContact.h  Contact.cpp  Contact.h  ContactManager.cpp  ContactManager.h  ContactSolver.cpp  ContactSolver.h  EdgeAndCircleContact.cpp  EdgeAndCircleContact.h  EdgeAndPolygonContact.cpp  EdgeAndPolygonContact.h  Fixture.cpp  Fixture.h  Island.cpp  Island.h  PolygonAndCircleContact.cpp  PolygonContact.cpp  PolygonContact.h  World.cpp  World.h  WorldCallbacks.h
tools/: CMakeLists.txt  DesignPatterns.cpp
(+47 files in other folders)
